--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -16,6 +16,7 @@ env:
   DOTNETRUNTIME_COMMIT: be32947d322ae71526ad1dde412a1dca44ea4fba
   DOTNETSDK_VERSION: 9.0.100-preview.6.24328.19
   ADDITIONAL_BUILD_ARGS: '/p:MonoEnableAssertMessages=true /p:WasmEnableES6=true /p:WasmExceptionHandling=true'
+  GitVersion_Version: 5.10.3
 
 concurrency: 
   group: ${{github.workflow}} - ${{github.ref}}
@@ -42,7 +43,19 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-        
+
+    - name: Setup GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.9
+      with:
+        versionSpec: ${{ env.GitVersion_Version }}
+
+    - name: GitVersion
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v0.9.9
+      with:
+        useConfigFile: true
+        configFilePath: build/gitversion.yml
+
     - name: Set Variable from current Commit
       run: |
         Invoke-Expression "git rev-parse --short HEAD"  | Out-String -NoNewLine -OutVariable CURRENT_COMMIT
@@ -70,26 +83,20 @@ jobs:
 
     - name: Create artifact structure
       run: |
-        New-Item -ItemType Directory -Force -Path ./runtime/artifacts/packages/Release/Shipping/uno/runtimes/browser-wasm/native
-        cd ./runtime/artifacts/packages/Release/Shipping/uno
+        New-Item -ItemType Directory -Force -Path $env:GITHUB_WORKSPACE/nuget/tools
+        New-Item -ItemType Directory -Force -Path $env:GITHUB_WORKSPACE/ci-output
 
         # Move cross compiler to appropriate location 
-        move $env:GITHUB_WORKSPACE\runtime\artifacts\bin\mono\Browser.wasm.Release\cross runtimes\browser-wasm\native
+        move $env:GITHUB_WORKSPACE\runtime\artifacts\bin\mono\Browser.wasm.Release\cross $env:GITHUB_WORKSPACE/nuget/tools
 
-    - name: Zip Archive
-      run: |
-
-        Invoke-Expression "Get-Location | select -ExpandProperty Path" | Out-String -NoNewLine -OutVariable Current_Path
-        $ARTIFACTS_FOLDER="$Current_Path\ci-artifacts"
-        mkdir -p $ARTIFACTS_FOLDER
-        cd .\runtime\artifacts\packages\Release\Shipping\uno
-        Compress-Archive -DestinationPath $ARTIFACTS_FOLDER\dotnet-aot-wasm-windows-$env:CURRENT_COMMIT-$env:BASE_DOTNET_SHORT_COMMIT-${{ github.run_id }}-$env:BUILD_CONFIGURATION$archiveConfiguration.zip -Path *
+        cd $env:GITHUB_WORKSPACE/nuget
+        dotnet pack Uno.NETCore.App.Runtime.AOT.Cross.browser-wasm.csproj /p:OutputPath=$GITHUB_WORKSPACE/ci-output "/p:Version=${{ steps.gitversion.outputs.semVer }}"
 
     - uses: actions/upload-artifact@v2
       if: ${{ always() }}
       with:
-        name: wasm
-        path: ci-artifacts
+        name: nuget
+        path: ci-output
 
   ##
   ## Build Job
@@ -105,6 +112,22 @@ jobs:
        MONO_WASM_THREADS: ['multithread', 'singlethread']
 
     steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+
+    - name: Setup GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.9
+      with:
+        versionSpec: ${{ env.GitVersion_Version }}
+
+    - name: GitVersion
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v0.9.9
+      with:
+        useConfigFile: true
+        configFilePath: build/gitversion.yml
+
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1.7.2
       with:
@@ -138,10 +161,6 @@ jobs:
 
     - name: Trust My Directory
       run: git config --global --add safe.directory /__w/Uno.DotnetRuntime.WebAssembly/Uno.DotnetRuntime.WebAssembly
-        
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
         
     - name: Set Variable from current Commit
       run: |
@@ -184,15 +203,19 @@ jobs:
         unzip -o '*.nupkg' -d uno
         cd uno
         rm *.nuspec
+
+        # remove unused assets that are part of the official SDK
         rm -fR _rels
         rm -fR package
+        rm -fR analyzers
+        rm -fR ref
+        rm -f \[Content_Types\].xml
+        rm -f Icon.png
+        rm -f LICENCE.TXT
+        find data ! -name 'RuntimeList.xml' -type f -exec rm -f {} +
 
     - name: Zip Archive
       run: |
-        if [ '${{ matrix.MONO_WASM_THREADS }}' != 'singlethread' ]; then
-            ARCHIVE_CONFIGURATION="-threads";
-        fi
-
         ARTIFACTS_FOLDER=`pwd`/ci-artifacts
         mkdir -p $ARTIFACTS_FOLDER
         cd ./runtime/artifacts/packages/Release/Shipping/uno
@@ -213,6 +236,18 @@ jobs:
       with:
         submodules: true
 
+    - name: Setup GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.9
+      with:
+        versionSpec: ${{ env.GitVersion_Version }}
+
+    - name: GitVersion
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v0.9.9
+      with:
+        useConfigFile: true
+        configFilePath: build/gitversion.yml
+
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1.7.2
       with:
@@ -229,7 +264,7 @@ jobs:
         cd nuget
         ls -la
         find . -name '*.zip' -exec sh -c 'unzip -d "${1%.*}" "$1"' _ {} \;
-        dotnet pack /p:OutputPath=$GITHUB_WORKSPACE/ci-output
+        dotnet pack Uno.NETCore.App.Runtime.Mono.browser-wasm.csproj /p:OutputPath=$GITHUB_WORKSPACE/ci-output "/p:Version=${{ steps.gitversion.outputs.semVer }}"
 
     - uses: actions/upload-artifact@v2
       if: ${{ always() }}
