--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -43,6 +43,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+        fetch-depth: 0
 
     - name: Setup GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.9
@@ -115,6 +116,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+        fetch-depth: 0
 
     - name: Setup GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.9
@@ -235,6 +237,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+        fetch-depth: 0
 
     - name: Setup GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.9
