--- a/nuget/Uno.NETCore.App.Runtime.Mono.browser-wasm.csproj
+++ b/nuget/Uno.NETCore.App.Runtime.Mono.browser-wasm.csproj
@@ -15,6 +15,9 @@
 	<ItemGroup>
 		<None Include="sdk-multithread/**" Pack="true" PackagePath="data/multithread" />
 		<None Include="sdk-singlethread/**" Pack="true" PackagePath="data/singlethread  " />
+
+		<!-- This is required to get the automatic GeneratePathProperty -->
+		<None Include="_._" Pack="true" PackagePath="tools" />
 	</ItemGroup>
 
 	<Target Name="DownloadAndSetPackageIcon" BeforeTargets="_GetPackageFiles">
