--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -19,7 +19,7 @@ env:
   GitVersion_Version: 5.10.3
 
 concurrency: 
-  group: ${{github.workflow}} - ${{github.ref}}
+  group: ${{github.workflow}} - ${{github.ref}} - ${{github.event_name}}
   cancel-in-progress: true
 
 jobs:
