--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -3,13 +3,13 @@ name: runtime CI
 on:
   push:
     branches:
-      - master
+      - main
       - release/**
       
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - master
+      - main
       - release/**
 
 env:
@@ -363,8 +363,13 @@ jobs:
     - name: Create NuGet SDK Packages
       run: |
         cd nuget
-        ls -la
+
+        # Adjust version numbers for target files
+        sed -i "s/\\\$buildversion\\\$/${{ steps.gitversion.outputs.semVer }}/g" runtime/*.*
+
+        # Unzip all packages in separate folders
         find . -name '*.zip' -exec sh -c 'unzip -d "${1%.*}" "$1"' _ {} \;
+
         dotnet pack Uno.NETCore.App.Runtime.Mono.browser-wasm.csproj /p:OutputPath=$GITHUB_WORKSPACE/ci-output "/p:Version=${{ steps.gitversion.outputs.semVer }}"
 
     - uses: actions/upload-artifact@v2
@@ -375,7 +380,7 @@ jobs:
 
   sign:
     name: Sign Package
-    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/release/')) }}
+    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')) }}
     runs-on: windows-latest
     needs: [package_job,build_aot_windows_job,build_aot_linux_job]
     steps:
